--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -337,5 +337,14 @@ textarea
   padding-top: 15px
   font-weight: 400
 
+.Ps-0
+  padding-left: 0
+
 .Ps-19
-  padding-left: 19px !important; /* !important is here because of the bootstrap */
+  padding-left: 19px !important /* !important is here because of the bootstrap */
+
+.cursor-auto
+  cursor: auto !important
+
+.bg-c-t__hover:hover
+  background-color: transparent !important
