--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -340,6 +340,9 @@ textarea
 .Ps-0
   padding-left: 0
 
+.Ps-6
+  padding-left: 6px !important
+
 .Ps-19
   padding-left: 19px !important /* !important is here because of the bootstrap */
 
@@ -348,3 +351,6 @@ textarea
 
 .bg-c-t__hover:hover
   background-color: transparent !important
+
+.appearance-0
+  -webkit-appearance: none
