--- a/app/scripts/views/kilpailutukset/kilpailutus.html
+++ b/app/scripts/views/kilpailutukset/kilpailutus.html
@@ -1,15 +1,14 @@
 <div class="container">
-	<div class="page-header">
-    <h1>Tulevan kilpailutuksen lisääminen / muokkaaminen</h1>
-  </div>
-	<div class="modal-body">
-	  <ng-form name="kilpailutusForm">
+	<h1>Tulevan kilpailutuksen lisääminen / muokkaaminen</h1>
+  <ng-form name="kilpailutusForm">
+  	<fieldset style="margin-top: 2em;">
+    	<legend>Kohde</legend>
 			<div class="row">
 				<div class="col-md-12">
 		  		<label>Organisaatio</label>
 		  		<p class="form-control-static">{{ kilpailutus.organisaatio.nimi }}</p>
 		    </div>
-		   	<div class="col-md-12">
+		   	<div class="col-sm-4 col-md-6">
 			   	<form-group label="Kohteen nimi" errormessage="kohteenNimiErrorMessage">
 		        <input id="linjat" name="kohteenNimi" type="text" required
 	           ng-model="kilpailutus.linjat"
@@ -17,58 +16,161 @@
 	           placeholder="Ilmoita linja(t), joita sopimus koskee"/>
 		      </form-group>
 		     </div>
-		 	</div>
-	    <div class="row">
-	      <div class="col-md-3 col-md-3">
-	      	<form-group label="Suunniteltu julkaisuaika" errormessage="suunniteltuJulkaisuajankohtaErrorMessage">
-		        <input id="tarjousPvm" name="tarjousPvm" type="date" required
-	           ng-model="kilpailutus.tarjousPvm"
-	           ng-disabled="isReadonly()"
-	           placeholder="pp.kk.vvvv"/>
+	      <div class="col-xs-12 col-sm-4 col-md-3">
+	      	<form-group label="Kohteen arvioitu arvo" errormessage="kohteenArvioituArvoErrorMessage">
+		        <input id="kohteenArvioituArvo" name="kohteenArvioituArvo" type="text"
+	                 class="form-control" placeholder="Kohteen arvioitu arvo (€)"
+	                 ng-currency="" numeric-only="" max="9999999999.99"
+	                 noenter select-on-click
+	                 ng-model="kilpailutus.kohteenArvioituArvo" ng-disabled="isReadonly()">
 		      </form-group>
 		    </div>
-		    <div class="col-md-3">
-	      	<form-group label="Tarjousten määräaika" errormessage="tarjoustenMaaraaikaErrorMessage">
-		        <input id="paatosPvm" name="paatosPvm" type="date"
-	           ng-model="kilpailutus.paatosPvm"
-	           ng-disabled="isReadonly()"
-	           placeholder="pp.kk.vvvv"/>
-		      </form-group>
-		    </div>
-				<div class="col-md-3">
-	      	<form-group label="Ilmoitus voittajasta" errormessage="ilmoitusVoittajastaErrorMessage">
-		        <input id="ilmoitusVoittajastaPvm" name="ilmoitusVoittajastaPvm" type="date" required
-	           ng-model="kilpailutus.ilmoitusVoittajastaPvm"
-	           ng-disabled="isReadonly()"
-	           placeholder="pp.kk.vvvv"/>
-		      </form-group>
-		    </div>
-				<div class="col-md-3">
-	      	<form-group label="Liikennöinnin aloittaminen" errormessage="liikennoinninAloittaminenErrorMessage">
-		        <input id="liikennointiAlkaaPvm" name="liikennointiAlkaaPvm" type="date" required
-	           ng-model="kilpailutus.liikennointiAlkaaPvm"
-	           ng-disabled="isReadonly()"
-	           placeholder="pp.kk.vvvv"/>
-		      </form-group>
-		    </div>
-	    </div>
-	    <div class="row">
-	      <div class="col-md-12">
-		      <form-group label="Vaadittu kalusto" errormessage="vaadittuKalustoErrorMessage">
-		      	<textarea name="vaadittuKalusto" ng-model="kilpailutus.vaadittuKalusto" required></textarea>
-		      </form-group>
-		     </div>
-	    </div>
-	    <div class="row">
-	      <div class="col-md-12">
+		    <div class="col-xs-12 col-sm-4 col-md-3">
+		      <form-group label="Arvio kaluston määrästä" errormessage="arvioKalustonMaarastaErrorMessage">
+	          <input id="arvioKalustonMaarasta" name="arvioKalustonMaarasta"
+	                 placeholder="Arvio kaluston määrästä"
+	                 type="text" required integer-only
+	                 ng-readonly="isReadonly()"
+	                 noenter select-on-click
+	                 ng-model="kilpailutus.arvioKalustonMaarasta"
+	                 class="cursor-auto">
+	        </form-group>
+	      </div>
+	      <div class="col-xs-12">
 	      	<form-group label="Lisätiedot" errormessage="lisatiedotErrorMessage">
 		      	<textarea name="lisatiedot" ng-model="kilpailutus.lisatiedot" required></textarea>
 	      	</form-group>
 	      </div>
+	      <div class="col-xs-12">
+	      	<p><a href="kilpailutus.linkToHilma">{{ kilpailutus.linkToHilma }}</a></p>
+	     	</div>
 	    </div>
-	    <p><a href="kilpailutus.linkToHilma">{{ kilpailutus.linkToHilma }}</a></p>
-	  </ng-form>
-	</div>
+	  </fieldset>
+    <fieldset style="margin-top: 1em;">
+    	<legend>Perusosa</legend>
+	    <div class="row">
+	      <div class="col-sm-6 col-md-3">
+	      	<form-group label="Tarjouksen julk. PVM" errormessage="tarjouksenJulkaisupaivamaaraErrorMessage">
+		        <input id="tarjouksenJulkaisupaivamaara" name="tarjouksenJulkaisupaivamaara" type="date" required
+	           ng-model="kilpailutus.tarjouksenJulkaisupaivamaara"
+	           ng-disabled="isReadonly()"
+	           placeholder="pp.kk.vvvv"/>
+		      </form-group>
+		    </div>
+		    <div class="col-sm-6 col-md-3">
+	      	<form-group label="Tarjousajan päättyminen" errormessage="tarjousajanPaattyminenErrorMessage">
+		        <input id="tarjousajanPaattyminen" name="tarjousajanPaattyminen" type="date"
+	           ng-model="kilpailutus.tarjousajanPaattyminen"
+	           ng-disabled="isReadonly()"
+	           placeholder="pp.kk.vvvv"/>
+		      </form-group>
+		    </div>
+				<div class="col-sm-6 col-md-3">
+	      	<form-group label="Hankintapäätös" errormessage="hankintaPaatosErrorMessage">
+		        <input id="hankintaPaatos" name="hankintaPaatos" type="date" required
+	           ng-model="kilpailutus.hankintaPaatos"
+	           ng-disabled="isReadonly()"
+	           placeholder="pp.kk.vvvv"/>
+		      </form-group>
+		    </div>
+				<div class="col-sm-6 col-md-3">
+	      	<form-group label="Liikennöinnin aloituspäivä" errormessage="liikennoinninAloituspaivaErrorMessage">
+		        <input id="liikennoinninAloituspaiva" name="liikennoinninAloituspaiva" type="date" required
+	           ng-model="kilpailutus.liikennoinninAloituspaiva"
+	           ng-disabled="isReadonly()"
+	           placeholder="pp.kk.vvvv"/>
+		      </form-group>
+		    </div>
+	    </div>
+	    <div class="row">
+	    	<div class="col-sm-6 col-md-3">
+	      	<form-group label="Liikennöinnin päättyminen" errormessage="liikennoinninPaattyminenIlmanOptiotaErrorMessage">
+		        <input id="liikennoinninPaattyminenIlmanOptiota" name="liikennoinninPaattyminenIlmanOptiota" type="date" required
+	           ng-model="kilpailutus.liikennoinninPaattyminenIlmanOptiota"
+	           ng-disabled="isReadonly()"
+	           placeholder="pp.kk.vvvv"/>
+		      </form-group>
+		    </div>
+	    </div>
+	  </fieldset>
+    <fieldset style="margin-top: 1em;">
+   		<legend>Optiot</legend>
+	    <div class="row">
+	      <div class="col-sm-4 col-md-3">
+	      	<form-group label="Optiovuodet" errormessage="optiovuodetErrorMessage">
+		        <input id="optiovuodet" name="optiovuodet" type="text"
+	           ng-model="kilpailutus.optiovuodet"
+	           ng-disabled="isReadonly()"
+	           placeholder="Optiovuodet"/>
+		      </form-group>
+	      </div>
+	      <div class="col-sm-4 col-md-3">
+	      	<form-group label="Hankitun kauden päättyminen" errormessage="hankitunOptioKaudenPaattyminenErrorMessage">
+		        <input id="hankitunOptioKaudenPaattyminen" name="hankitunOptioKaudenPaattyminen" type="date"
+	           ng-model="kilpailutus.hankitunOptioKaudenPaattyminen"
+	           ng-disabled="isReadonly()"
+	           placeholder="pp.kk.vvvv"/>
+		      </form-group>
+	      </div>
+	      <div class="col-sm-4 col-md-3">
+	      	<form-group label="Optioiden päättyminen" errormessage="optioidenPaattyminenErrorMessage">
+		        <input id="optioidenPaattyminen" name="optioidenPaattyminen" type="date"
+	           ng-model="kilpailutus.optioidenPaattyminen"
+	           ng-disabled="isReadonly()"
+	           placeholder="pp.kk.vvvv"/>
+		      </form-group>
+	      </div>
+	    </div>
+	  </fieldset>
+    <fieldset style="margin-top: 1em;">
+    	<legend>Saadut tarjoukset</legend>
+	    <div class="row">
+	      <div class="col-sm-4 col-md-3">
+	      	<form-group label="Tarjousten lukumäärä">
+	          <input id="tarjoustenLukumaara" name="tarjoustenLukumaara"
+	                 placeholder="Tarjousten lukumäärä"
+	                 type="text" integer-only
+	                 ng-readonly="isReadonly()"
+	                 noenter select-on-click
+	                 ng-model="kilpailutus.tarjoustenLukumaara"
+	                 class="cursor-auto">
+	        </form-group>
+		     </div>
+		    <div class="col-sm-4 col-md-3">
+		    	<form-group label="Voittaneen tarjouksen hinta">
+		        <input id="voittaneenTarjouksenHinta" name="voittaneenTarjouksenHinta" type="text"
+	                 class="form-control" placeholder="Voittaneen tarjouksen hinta (€)"
+	                 ng-currency="" numeric-only="" max="9999999999.99"
+	                 noenter select-on-click
+	                 ng-model="kilpailutus.voittaneenTarjouksenHinta" ng-disabled="isReadonly()">
+		      </form-group>
+		    </div>
+		    <div class="col-sm-4 col-md-3">
+		    	<form-group label="Toiseksi tulleen hinta">
+		        <input id="toiseksiTulleenTarjouksenHinta" name="toiseksiTulleenTarjouksenHinta" type="text"
+	                 class="form-control" placeholder="Toiseksi tulleen tarjouksen hinta (€)"
+	                 ng-currency="" numeric-only="" max="9999999999.99"
+	                 noenter select-on-click
+	                 ng-model="kilpailutus.toiseksiTulleenTarjouksenHinta" ng-disabled="isReadonly()">
+		      </form-group>
+		    </div>
+	    </div>
+	  </fieldset>
+	  <fieldset style="margin-top: 1em;">
+    	<legend>Ratkaisu</legend>
+	    <div class="row">
+		    <div class="col-md-12">
+			   	<form-group label="Liikennöitsijä">
+		        <input id="linjat" name="liikennoitsija" type="text"
+		         ng-model="kilpailutus.liikennoitsija"
+		         ng-disabled="isReadonly()"
+		         placeholder="Liikennöitsijä"/>
+		      </form-group>
+		    </div>
+		  </div>
+		</fieldset>
+  </ng-form>
+
 	<div class="modal-footer">
 	  <button class="btn btn-primary pull-right" ng-click="ok()">Tallenna</button>
 	  <button class="btn btn-warning pull-left" ng-click="cancel()">Sulje</button>
