--- a/app/scripts/views/kilpailutukset/kilpailutus.html
+++ b/app/scripts/views/kilpailutukset/kilpailutus.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h1>Tulevan kilpailutuksen lisääminen / muokkaaminen</h1>
+	<h1>Liikennöintisopimuksen / uuden kilpailutuksen tiedot</h1>
   <ng-form name="kilpailutusForm">
   	<fieldset style="margin-top: 2em;">
     	<legend>Kohde</legend>
@@ -19,7 +19,7 @@
 	      <div class="col-xs-12 col-sm-4 col-md-3">
 	      	<form-group label="Kohteen arvioitu arvo" errormessage="kohteenArvioituArvoErrorMessage">
 		        <input id="kohteenArvioituArvo" name="kohteenArvioituArvo" type="text"
-	                 class="form-control" placeholder="Kohteen arvioitu arvo (€)"
+	                 class="form-control" placeholder="Arvo (€)"
 	                 ng-currency="" numeric-only="" max="9999999999.99"
 	                 noenter select-on-click
 	                 ng-model="kilpailutus.kohteenArvioituArvo" ng-disabled="isReadonly()">
@@ -38,7 +38,7 @@
 	      </div>
 	      <div class="col-xs-12">
 	      	<form-group label="Lisätiedot" errormessage="lisatiedotErrorMessage">
-		      	<textarea name="lisatiedot" ng-model="kilpailutus.lisatiedot" required></textarea>
+		      	<textarea name="lisatiedot" ng-model="kilpailutus.lisatiedot"></textarea>
 	      	</form-group>
 	      </div>
 	      <div class="col-xs-12">
@@ -47,7 +47,7 @@
 	    </div>
 	  </fieldset>
     <fieldset style="margin-top: 1em;">
-    	<legend>Perusosa</legend>
+    	<legend>Kilpailutus</legend>
 	    <div class="row">
 	      <div class="col-sm-6 col-md-3">
 	      	<form-group label="Tarjouksen julk. PVM" errormessage="tarjouksenJulkaisupaivamaaraErrorMessage">
@@ -73,6 +73,11 @@
 	           placeholder="pp.kk.vvvv"/>
 		      </form-group>
 		    </div>
+		  </div>
+		</fieldset>
+	  <fieldset style="margin-top: 1em;">
+    	<legend>Liikennöinti</legend>
+		 	<div class="row">
 				<div class="col-sm-6 col-md-3">
 	      	<form-group label="Liikennöinnin aloituspäivä" errormessage="liikennoinninAloituspaivaErrorMessage">
 		        <input id="liikennoinninAloituspaiva" name="liikennoinninAloituspaiva" type="date" required
@@ -81,8 +86,6 @@
 	           placeholder="pp.kk.vvvv"/>
 		      </form-group>
 		    </div>
-	    </div>
-	    <div class="row">
 	    	<div class="col-sm-6 col-md-3">
 	      	<form-group label="Liikennöinnin päättyminen" errormessage="liikennoinninPaattyminenIlmanOptiotaErrorMessage">
 		        <input id="liikennoinninPaattyminenIlmanOptiota" name="liikennoinninPaattyminenIlmanOptiota" type="date" required
@@ -91,8 +94,8 @@
 	           placeholder="pp.kk.vvvv"/>
 		      </form-group>
 		    </div>
-	    </div>
-	  </fieldset>
+		  </div>
+    </fieldset>
     <fieldset style="margin-top: 1em;">
    		<legend>Optiot</legend>
 	    <div class="row">
@@ -105,7 +108,7 @@
 		      </form-group>
 	      </div>
 	      <div class="col-sm-4 col-md-3">
-	      	<form-group label="Hankitun kauden päättyminen" errormessage="hankitunOptioKaudenPaattyminenErrorMessage">
+	      	<form-group label="Hankitun option päättyminen" errormessage="hankitunOptioKaudenPaattyminenErrorMessage">
 		        <input id="hankitunOptioKaudenPaattyminen" name="hankitunOptioKaudenPaattyminen" type="date"
 	           ng-model="kilpailutus.hankitunOptioKaudenPaattyminen"
 	           ng-disabled="isReadonly()"
@@ -123,8 +126,18 @@
 	    </div>
 	  </fieldset>
     <fieldset style="margin-top: 1em;">
-    	<legend>Saadut tarjoukset</legend>
+    	<legend>Tietoa tarjouksista</legend>
 	    <div class="row">
+	    	<div class="col-md-9">
+			   	<form-group label="Valittu liikennöitsijä">
+		        <input id="linjat" name="liikennoitsija" type="text"
+		         ng-model="kilpailutus.liikennoitsija"
+		         ng-disabled="isReadonly()"
+		         placeholder="Liikennöitsijä"/>
+		      </form-group>
+		    </div>
+		  </div>
+		  <div class="row">
 	      <div class="col-sm-4 col-md-3">
 	      	<form-group label="Tarjousten lukumäärä">
 	          <input id="tarjoustenLukumaara" name="tarjoustenLukumaara"
@@ -139,7 +152,7 @@
 		    <div class="col-sm-4 col-md-3">
 		    	<form-group label="Voittaneen tarjouksen hinta">
 		        <input id="voittaneenTarjouksenHinta" name="voittaneenTarjouksenHinta" type="text"
-	                 class="form-control" placeholder="Voittaneen tarjouksen hinta (€)"
+	                 class="form-control" placeholder="Hinta (€)"
 	                 ng-currency="" numeric-only="" max="9999999999.99"
 	                 noenter select-on-click
 	                 ng-model="kilpailutus.voittaneenTarjouksenHinta" ng-disabled="isReadonly()">
@@ -148,7 +161,7 @@
 		    <div class="col-sm-4 col-md-3">
 		    	<form-group label="Toiseksi tulleen hinta">
 		        <input id="toiseksiTulleenTarjouksenHinta" name="toiseksiTulleenTarjouksenHinta" type="text"
-	                 class="form-control" placeholder="Toiseksi tulleen tarjouksen hinta (€)"
+	                 class="form-control" placeholder="Hinta (€)"
 	                 ng-currency="" numeric-only="" max="9999999999.99"
 	                 noenter select-on-click
 	                 ng-model="kilpailutus.toiseksiTulleenTarjouksenHinta" ng-disabled="isReadonly()">
@@ -156,23 +169,15 @@
 		    </div>
 	    </div>
 	  </fieldset>
-	  <fieldset style="margin-top: 1em;">
-    	<legend>Ratkaisu</legend>
-	    <div class="row">
-		    <div class="col-md-12">
-			   	<form-group label="Liikennöitsijä">
-		        <input id="linjat" name="liikennoitsija" type="text"
-		         ng-model="kilpailutus.liikennoitsija"
-		         ng-disabled="isReadonly()"
-		         placeholder="Liikennöitsijä"/>
-		      </form-group>
-		    </div>
-		  </div>
-		</fieldset>
   </ng-form>
 
-	<div class="modal-footer">
-	  <button class="btn btn-primary pull-right" ng-click="ok()">Tallenna</button>
-	  <button class="btn btn-warning pull-left" ng-click="cancel()">Sulje</button>
-	</div>
+  <juku-controls ng-show="sallittu('kasittely-hakemus')">
+    <juku-controls-buttons>
+	  	<button data-ng-click="taydennyspyynto()" class="btn btn-warning">Sulje</button>
+      <button 
+      	juku-liikennointisopimuksen-tai-kilpailutuksen-poistodialogi
+      	data-ng-click="taydennyspyynto()" class="btn btn-danger">Poista liikennöintitieto</button>
+      <button data-ng-click="tarkastaHakemus()" class="btn btn-success">Tallenna</button>
+    </juku-controls-buttons>
+  </juku-controls>
 </div>
