LIVIJUKU-810 Dialogin tekstejä hiottu.

--- a/app/scripts/components/liikennointisopimuksenTaiKilpailutuksenPoistodialogi/index.html
+++ b/app/scripts/components/liikennointisopimuksenTaiKilpailutuksenPoistodialogi/index.html
@@ -2,8 +2,9 @@
 <div class="modal-body">
   <div class="row">
     <div class="col-md-12">
-      <p><span class="label label-danger" style="white-space: normal; line-height: 2;">Tiedäthän, että toimintoa ei voi peruuttaa ja vastattuasi kysymykseen myöntävästi kyseinen liikennöintisopimus / kilpailutus poistuu aikajanalta ja järjestelmästä.</span></p>
       <p>Oletko varma, että haluat poistaa kyseisen liikennöintisopimuksen / kilpailutuksen?</p>
+      <!-- <p><span class="label label-danger" style="white-space: normal; line-height: 2;">Tiedäthän, että toimintoa ei voi peruuttaa ja vastattuasi kysymykseen myöntävästi kyseinen liikennöintisopimus / kilpailutus poistuu aikajanalta ja järjestelmästä.</span></p> -->
+      <p><span class="label label-danger" style="white-space: normal; line-height: 2;">Poiston jälkeen liikennöintisopimus / kilpailutus poistuu aikajanalta ja järjestelmästä. Toimintoa ei voi peruuttaa.</span></p>
     </div>
   </div>
 </div>
