--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -8,6 +8,9 @@
 h1
   font-size: 32px
 
+h2
+  font-size: 26px
+
 h3
   font-size: 18px
   margin-bottom: 20px
@@ -358,3 +361,9 @@ textarea
 .title.h4
   font-weight: 600
   text-transform: uppercase
+
+.full-width
+  width: 100%
+
+.Ms-0
+  margin-left: 0 !important
