LIVIJUKU-812 Otsikoiden koot muutettu speksien mukaisiksi ja poistettu H1-otsikoiden alta alleviivaukset.

--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -1,9 +1,5 @@
 <div class="container">
-
-  <div class="page-header">
-    <h1>Oma kuvaaja tunnusluvuista</h1>
-  </div>
-
+  <h1 class="Mb-md">Oma kuvaaja tunnusluvuista</h1>
   <form id="tunnusluku-valinta-form" name="tunnusluku-valinta-form" class="form-inline tunnusluku-valinta-form">
     <form-group label="Valitse tarkasteltava tunnusluku">
         <select id="tunnusluku" ng-model="params.tunnuslukuid"
