--- a/app/scripts/views/tunnusluvut/raportit-tunnuslukukuvaajat.html
+++ b/app/scripts/views/tunnusluvut/raportit-tunnuslukukuvaajat.html
@@ -1,9 +1,5 @@
 <div class="container">
-
-  <div class="page-header">
-    <h1>Tunnuslukukuvaajat</h1>
-  </div>
-
+  <h1 class="Mb-md">Tunnuslukukuvaajat</h1>
   <juku-navigation>
     <juku-tabs>
       <juku-tab
