--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -1,7 +1,5 @@
 <div class="container" focus-to-invalid>
-  <div class="page-header">
-    <h1>Tunnuslukujen syöttäminen</h1>
-  </div>
+  <h1 class="Mb-md">Tunnuslukujen syöttäminen</h1>
   <form id="tunnusluvutValintaForm" name="tunnusluvutValintaForm" class="form-inline">
     <juku-form-row>
       <div class="col-md-4 form-group input-lg" ng-show="hasOrganisaatioSelectPermission">
