LIVIJUKU-811 Muutettu lause toiseen muotoon.

--- a/app/scripts/views/hakemus/seuranta-forms.html
+++ b/app/scripts/views/hakemus/seuranta-forms.html
@@ -99,7 +99,7 @@
     <a href="{{seurantatietoPdf}}" target="_blank">
       <span class="glyphicon glyphicon-file"></span>
       pdf-dokumenttina.
-    </a> Huomaa että tallentamattomat muutokset eivät näy tässä pdf-dokumentissa.
+    </a> Viimeisimmät tehdyt muutokset näkyvät pdf-dokumentissa vasta maksatushakemuslomakkeen tallentamisen jälkeen.
   </p>
 </juku-form-section>
 
