toClass filtteri hetetty menemään ja korvattu ng-class direktiivilla

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -22,29 +22,27 @@
           </a>
         </li>
 
-        <li class="header__button {{ ownApplicationTabActive() | toClass:'is-active' }}"
+        <li class="header__button" ng-class="{'is-active': ownApplicationTabActive()}"
             ng-show="sallittu(user, 'view-oma-hakemus')">
           <a class="header__link" ui-sref="app.hakija.hakemukset.omat()">
             Omat hakemukset
           </a>
         </li>
 
-        <li class="header__button
-          {{ ('hakemukset' | stateNameIncludes:['app.hakija.hakemukset.omat']) ||
-             ('app.hakemus' | isState) && !isOwnApplication()
-            | toClass:'is-active'
-          }}" ng-show="sallittu(user, 'view-hakemus')">
+        <li class="header__button"
+            ng-class="{ 'is-active': ('hakemukset' | stateNameIncludes:['app.hakija.hakemukset.omat']) || ('app.hakemus' | isState) && !isOwnApplication() }"
+            ng-show="sallittu(user, 'view-hakemus')">
           <a class="header__link" ui-sref="app.yhteinen.hakemukset.list({tyyppi: getType()})">
             Kaikki hakemukset
           </a>
         </li>
         <li
-          class="header__button {{ 'app.tunnusluku' | includedByState | toClass:'is-active' }}">
+          class="header__button"
+          ng-class = "{'is-active': ('app.tunnusluku' | includedByState) }">
           <juku-statistic-dropdown user="user"></juku-statistic-dropdown>
         </li>
-        <li class="header__button
-          {{ ('app.kilpailutus' | isState) || ('app.kilpailutukset' | isState) | toClass:'is-active'
-          }}" ng-show="sallittu(user, 'view-hakemus')">
+        <li class="header__button"
+            ng-class="{'is-active': ('app.kilpailutus' | isState) || ('app.kilpailutukset' | isState) }">
           <a class="header__link" ui-sref="app.kilpailutukset">
             Kilpailutukset
           </a>
